Fix Onscreen Keyboard crash in --mus.

OzonePlatform is instantiated in mus-ws in --mus and we don't have access to it
in ui::KeyboardController. Trying to access OzonePlatform here failed the
DCHECK() in ui::OzonePlatform::GetInstance().

BUG=719540

Review-Url: https://codereview.chromium.org/2871673004
Cr-Commit-Position: refs/heads/master@{#470462}